[package]
name = "rost"
version = "0.1.0"
edition = "2021"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "A library for sorting"
license = "MIT"
repository = "https://github.com/FedericoStra/rost"
keywords = ["sorting", "algorithms"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
